allow_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-postgress
spec:
  podSelector:
    matchLabels:
      app: postgresql-db
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: frontend
      ports:
      - port: 5432
        protocol: TCP
